--- a/build.xml
+++ b/build.xml
@@ -1,37 +1,61 @@
-<project name="junit-example">
-  <property name="main.build.dir" value="build/main"/>
-  <property name="main.src.dir" value="src/main/java"/>
-  <property name="test.build.dir" value="build/test"/>
-  <property name="test.src.dir" value="src/test/java"/>
 
-  <path id="classpath.test">
-    <pathelement location="lib/junit-4.12.jar"/>
-    <pathelement location="lib/hamcrest-core-1.3.jar"/>
-    <pathelement location="${main.build.dir}"/>
-  </path>
+<project default="compile">
 
-  <target name="compile">
-    <mkdir dir="${main.build.dir}"/>
-    <javac srcdir="${main.src.dir}" destdir="${main.build.dir}" includeantruntime="false"/>
-  </target>
 
-  <target name="test-compile" depends="compile">
-    <mkdir dir="${test.build.dir}"/>
-    <javac srcdir="${test.src.dir}" destdir="${test.build.dir}" includeantruntime="false">
-        <classpath refid="classpath.test"/>
-    </javac>
-  </target>
+    <property name="src.java.dir" location="./src/main/java"/>
+    <property name="src.test.dir" location="./src/test"/>
+    <property name="result.dir" location="./target"/>
+    <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
+    <property name="result.testclasses.dir" location="${result.dir}/testclasses"/>
 
-  <target name="test" depends="test-compile">
-    <junit printsummary="on" haltonfailure="yes" fork="true">
-        <classpath>
-          <path refid="classpath.test"/>
-          <pathelement location="${test.build.dir}"/>
-        </classpath>
-        <formatter type="brief" usefile="false" />
-        <batchtest>
-            <fileset dir="${test.src.dir}" includes="**/*Test.java" />
-        </batchtest>
-    </junit>
-  </target>
+
+
+
+
+    <path id="NecessaryLibraries">
+        <pathelement location="./UsedLibraries/junit-4.12.jar"/>
+        <!--matcher-->
+        <pathelement location="./UsedLibraries/hamcrest-core-1.3.jar"/>
+        <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
+    </path>
+
+
+    <target name="compile">
+        <mkdir dir="${result.javaclasses.dir}"/>
+        <javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true"  includeantruntime="false">
+        </javac>
+    </target>
+
+
+    <target name="compile-testcases" depends="compile">
+        <mkdir dir="${result.testclasses.dir}"/>
+        <javac srcdir="${src.test.dir}"  destdir="${result.testclasses.dir}" debug="true" includeantruntime="false">
+            <classpath>
+
+                <path refid="NecessaryLibraries"/>
+                <pathelement location="${result.javaclasses.dir}"/>
+            </classpath>
+        </javac>
+    </target>
+
+    <target name="test" depends="compile-testcases">
+        <!--fork : each test will run in its own JVM (to seperate test cases)-->
+        <junit printsummary="true" haltonfailure="true" fork="true">
+            <classpath>
+                <path refid="NecessaryLibraries"></path>
+                <pathelement location="${result.javaclasses.dir}"/>
+                <pathelement location="${result.testclasses.dir}"/>
+            </classpath>
+            <formatter type="brief" usefile="false"/>
+            <batchtest >
+                <fileset dir="${result.testclasses.dir}" >
+                     <include name="**/*Test.class"/>
+                </fileset>
+            </batchtest>
+
+        </junit>
+    </target>
+
+
+
 </project>
